@@ -1,3 +1,9 @@
+2004-04-30 Nickolay V. Shmyrev  <nshmyrev@yandex.ru>
+
+	* cong-menus.c: Added new menu item Help/Homepage
+	that will open www.conglomerate.org in browser.
+	See bug #134966 for details.
+
 2004-04-30 hondaguru  <hondaguru@earthlink.net>
 
 	* cong-location.c:
